# sermaid

./: Cargo.toml  Makefile  README.md
.github.bak/workflows/: ci.yml
.github/workflows/: ci-make.yml  ci.yml  release-nightly.yml  universal-lint.yml
src/: main.rs  openai.rs  sermaid.rs
