[package]
name = "sermaid"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0"
food = { git = "https://github.com/THE-cattail/food-rs.git", branch = "master" }
home = "0"
indicatif = "0"
reqwest = { version = "0", features = ["json"] }
rustyline = "12"
serde = { version = "1", features = ["derive"] }
shell-words = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
toml = "0"
tracing = "0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
